Added word selection with proper validation of valid selection of boxes

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -19,6 +19,7 @@ ol, ul {
 
 .box {
     background: #fff;
+    /*color: red;*/
     border: 1px solid #999;
     float: left;
     font-size: 24px;
