--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,6 +1,6 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    padding: 20px;
 }
 
 ol, ul {
@@ -15,6 +15,12 @@ ol, ul {
 
 .status {
     margin-bottom: 10px;
+}
+button {
+    cursor: pointer
+}
+button:hover{
+    background-color: #f5f5f5!important;
 }
 
 .box {
@@ -49,3 +55,8 @@ ol, ul {
 .game-info {
     margin-left: 20px;
 }
+
+.entered-word {
+    margin-top: 10px;
+}
+
