--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -16,12 +16,13 @@ ol, ul {
 .status {
     margin-bottom: 10px;
 }
+
 button {
     cursor: pointer
 }
-button:hover{
-    background-color: #f5f5f5!important;
-}
+/*button:hover{*/
+/*    background-color: #f5f5f5!important;*/
+/*}*/
 
 .box {
     background: #fff;
